--- a/src/main/java/designpatterns/prototype/readme.text
+++ b/src/main/java/designpatterns/prototype/readme.text
@@ -8,7 +8,8 @@
        通过克隆来创建一个对象相比实例化一个对象效率更高，克隆方法所创建的对象是全新的对象，
        它们在内存中拥有新的地址，通常对克隆所产生的对象进行修改对原型对象不会造成任何影响，每一个克隆对象都是相互独立的。
 
-
+    深克隆：
+        使对象实现Serializable接口，然后把对象（实际上只是对象的一个拷贝）写到一个流里（腌成咸菜），再从流里读出来（把咸菜回鲜），便可以重建对象。
 
 
 要点：1.必须实现Cloneable接口
