--- a/src/main/java/designpatterns/prototype/readme.text
+++ b/src/main/java/designpatterns/prototype/readme.text
@@ -1,8 +1,6 @@
 
 
 原型模式
-
-
        实现Cloneable接口来实现可克隆的方法，Object对象默认是具有clone()方法的，浅克隆。
 
        通过克隆来创建一个对象相比实例化一个对象效率更高，克隆方法所创建的对象是全新的对象，
@@ -12,7 +10,9 @@
         使对象实现Serializable接口，然后把对象（实际上只是对象的一个拷贝）写到一个流里（腌成咸菜），再从流里读出来（把咸菜回鲜），便可以重建对象。
 
 
-要点：1.必须实现Cloneable接口
+
+
+要点：1.必须实现Cloneable接口,只能在对象内使用clone方法。
      2.只有具体的对象才能被克隆，抽象类和接口均不行
      3.克隆方法不使用构造函数实例化对象，因此相对于单例模式冲突。
      4.分为浅克隆和深克隆两种
