--- a/src/main/java/designpatterns/proxy/readme.text
+++ b/src/main/java/designpatterns/proxy/readme.text
@@ -9,6 +9,7 @@
                     代理对象内部含有目标对象的引用，从而可以在任何时候操作目标对象；代理对象和目标对象具有统一的接口，以便可以再任何时候替代目标对象。
                     代理对象通常在客户端调用传递给目标对象之前或者之后，执行某些操作，而非单纯的将调用传递给目标对象。
 
+            4. 代理对象和被代理对象都需要实现统一接口
 
 代理模式的使用场景：
 
